# msparsm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  ms.c  ms.h  mspar.c  mspar.h  streec.c
src/: CMakeLists.txt  mspar.h
